@@ -83,6 +83,10 @@ dis
 --------------------------------------------------------------------------------
 simulation
 
+   Gimbal class
+      1) Added the new 'earthRadius' slot and function 'getEarthRadius(), which
+      define the radius used for earth masking of the line of sight to the target.
+
    Navigation class
       -- Fixed bug in calculating navigation UTC time
 
@@ -91,6 +95,9 @@ simulation
       BaseClass::processComponents()
 
       2) initData() -- Player name defaults to nul string (e.g., "")
+
+      3) added getEarthRadius() that returns the earth radius at the location
+      of the player.
 
    Route class
       1) Fixed bug in insertSteerpoint concerning position datatype
@@ -106,9 +113,12 @@ simulation
       BaseClass::processComponents()
 
    Tdb class
-      -- computeBoresightData() -- to decrease stack usage, the local arrays (xa,
+      1) computeBoresightData() -- to decrease stack usage, the local arrays (xa,
       ya, za, ra, and ra2) are now member varaibles and dynamically allocated by
       resizeArrays()
+
+      2) processPlayers() -- modified to use its Gimbal's earth radius
+
 --------------------------------------------------------------------------------
 
 
